--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,7 +6,8 @@
 
     <title>Svelte app</title>
 
-    <link rel="icon" type="image/png" href="favicon.png" />
+    <link rel="icon" type="image/png" href="/favicon.png" />
+    <link rel="stylesheet" href="/foundation-icons.css" />
     <link rel="stylesheet" href="/foundation.css" />
     <link rel="stylesheet" href="/global.css" />
     <link rel="stylesheet" href="/build/bundle.css" />
